fix: second scrollbar appearing when importing a calendar

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,5 +17,5 @@
 }
 
 body {
-  overflow-y: scroll
+  overflow-y: auto
 }
